# formencode

./: .coverage  .gitattributes  .gitignore  .hgignore  .travis.yml  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  Makefile  README.rst  README.txt  pyproject.toml  pytest.ini  regen-docs  regen-lang  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  run-tests-generate-coverage-html  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  run-qa.yml  run-tests.yml
coverage/: formencode.api.html  formencode.compound.html  formencode.context.html  formencode.declarative.html  formencode.doctest_xml_compare.html  formencode.fieldstorage.html  formencode.foreach.html  formencode.html  formencode.htmlfill.html  formencode.htmlfill_schemabuilder.html  formencode.htmlgen.html  formencode.htmlrename.html  formencode.interfaces.html  formencode.rewritingparser.html  formencode.schema.html  formencode.util.html  formencode.util.threadinglocal.html  formencode.validators.html  formencode.variabledecode.html  index.html
docs/: Design.txt  Makefile  ToDo.txt  Validator.txt  build  community.txt  conf.py  default.css  download.txt  form-generation.txt  history.txt  htmlfill.txt  i18n.txt  index.txt  make.bat  modules.txt  news.txt  requirements.txt  test_docs.py  whatsnew-0-to-1.2.4.txt  whatsnew-1.2.5.txt  whatsnew-1.3.0.txt  whatsnew-2.0.txt
docs/_static/: default.css
docs/form-generation-example/: crud_index.html.tmpl  generatorapp.py  generatoreditable.py  index.html.tmpl  server.py
docs/modules/: api.txt  compound.txt  (+12 more)
examples/: webware_example.ini
formencode/: __init__.py  addressing.py  api.py  compound.py  context.py  declarative.py  doctest_xml_compare.py  dummy_protocols.py  fields.py  fieldstorage.py  foreach.py  formgen.py  htmlfill.py  htmlfill_schemabuilder.py  htmlform.py  htmlgen.py  htmlrename.py  interfaces.py  national.py  rewritingparser.py  schema.py  sqlformgen.py  sqlschema.py  test_doctest_xml_compare.py  test_formgen.py  test_htmlgen.py  test_schema.py  test_validators.py  validators.py  variabledecode.py
tests/: __init__.py  conftest.py  disabled_makeform.py  disabled_sqlschema.py  non_empty.txt  test_cc.py  test_cc_expires.py  test_cc_validator.py  test_compound.py  test_context.py  test_declarative.py  test_doctest_xml_compare.py  test_doctests.py  test_email.py  test_formgen.py  test_htmlfill.py  test_htmlfill_control.py  test_htmlgen.py  test_htmlrename.py  test_i18n.py  test_makeform.py  test_schema.py  test_sqlschema.py  test_subclassing.py  test_subclassing_old.py  test_validators.py  test_variabledecode.py
validator/: compound.py  doctest_xml_compare.py  htmlform.py  schema.py  test_formgen.py  testcase.py  variabledecode.py
(+108 files in other folders)
