# Babel configuration
[compile_catalog]
domain = FormEncode
directory = formencode/i18n
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = formencode/i18n/FormEncode.pot
charset = utf-8
msgid_bugs_address = formencode-discuss@lists.sf.net
width = 80

[init_catalog]
domain = FormEncode
input_file = formencode/i18n/FormEncode.pot
output_dir = formencode/i18n

[update_catalog]
domain = FormEncode
input_file = formencode/i18n/FormEncode.pot
output_dir = formencode/i18n
previous = true

[wheel]
universal = 1

[pep8]
max_line_length=100

[flake8]
max_line_length=100

[metadata]
license_files = LICENSE.txt
