[metadata]
name = FormEncode
description = "HTML form validation, generation, and conversion package"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ian Bicking
author_email = ianb@colorstudy.com
maintainer = Chris Lambacher
maintainer_email = chris@kateandchris.net
url = https://www.formencode.org/
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages =
    formencode
python_requires = >=3.7
include_package_data = False

[options.package_data]
formencode =
    javascript/*.js
    i18n/**/*.mo

[options.extras_require]
testing =
    pytest
    dnspython >= 2
    pycountry

# Babel configuration
[compile_catalog]
domain = FormEncode
directory = formencode/i18n
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = formencode/i18n/FormEncode.pot
charset = utf-8
msgid_bugs_address = formencode-discuss@lists.sf.net
width = 80

[init_catalog]
domain = FormEncode
input_file = formencode/i18n/FormEncode.pot
output_dir = formencode/i18n

[update_catalog]
domain = FormEncode
input_file = formencode/i18n/FormEncode.pot
output_dir = formencode/i18n
previous = true

[pep8]
max_line_length=88

[flake8]
max-line-length = 88
extend-ignore = E128,E402,E501,E731
